--- a/_posts/2019-06-28-the-us-narrative-today.html
+++ b/_posts/2019-06-28-the-us-narrative-today.html
@@ -2648,107 +2648,107 @@ stories:
   domain: http://www.ottumwacourier.com/
   link: https://www.ottumwacourier.com/region/lawsuit-seeks-to-block-georgia-law-that-bans-most-abortions/article_eb335bdf-ca7e-5542-9171-4c2e8ca81933.html
 images:
-- name: eduardo-eduardo-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-constitution.jpg
-- name: powerlines-power-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-post-modern.jpg
-- name: powerlines-power-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-really-hot.jpg
-- name: oldbarn-oldbarn-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-three.jpg
-- name: white-house-lawn-white-house-lawn-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
-- name: oldroad-old-road-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-hot-spicy.jpg
-- name: carry-load-carryload-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-space-pizza.jpg
-- name: aws-s3-blossombar-blossombar-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-blossombar-blossombar-still.jpg
-- name: old-school-house-old-schoolhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-two.jpg
-- name: ellis-island-ellisisland-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-clean-view.jpg
-- name: yuma-bank-yuma-bak-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-copper-circuit-2.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-ww2-dresden.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-three.jpg
-- name: amusement-park-amusement-park-2-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-atari-asteroids.jpg
-- name: border-crossing-bordercrossing-atari-missle.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-atari-missle.png
-- name: oldtrain-oldtrain-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-spagetti-accident.jpg
-- name: fence-mexico-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
-- name: old-door-lock-old-door-lock-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kand-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-monet-one.jpg
-- name: amusement-park-amusement-park-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
-- name: beach-rocks-beach-rocks-currents-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-aqua.jpg
-- name: ellis-island-ellisisland-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
-- name: windowmountain-window-mountain-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
-- name: fence-fence-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-deep-connections.jpg
-- name: bordercrossing-bordercrossing-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gan-vogh.jpg
-- name: oldcabin-store-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purp-paper.jpg
-- name: oldcabin-store-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-pablo-blue.jpg
-- name: old-barn-old-barn-1500-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-green-zuma.jpg
-- name: curtain-curtain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colored-circuits.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-satan-red.jpg
-- name: old-cabin-oldcabin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-dresden.jpg
+- name: containership-containership-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sand-paper.jpg
+- name: hollywood-building-hollywood-building-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-sand-paper.jpg
+- name: fence-mexico-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gred-mash.jpg
+- name: sand-hand-sand-hand-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-internet-numbers.jpg
+- name: yosemite-yosemite-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
+- name: carry-load-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-diego-rivera1.jpg
+- name: aws-s3-square-file-00-00-00-00-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-square.jpg
+- name: nyc-flag-nycflag-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-hot-spicy.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-feed-people.jpg
+- name: aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
+- name: downtown-los-angeles-downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-copper-circuit.JPG
+- name: trucksilo-trucksilo-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-post-modern.jpg
+- name: gypsy-wagon-gypsywagon-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-matrix.jpg
+- name: yosemite-yosemite-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
+- name: power-lines-power-lines-empty-space-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smoking-cigarette.jpg
+- name: oldhotel-oldhotel-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-deep-connections.jpg
+- name: white-house-lawn-white-house-window-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-cinnamon-rolls.jpg
+- name: bordercrossing-bordercrossing-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-constitution.jpg
+- name: downtown-los-angeles-downtown-la-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-plentiful.JPG
+- name: containership-bw-storytelling-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colorful-blocks.png
+- name: death-valley-death-valley-national-park-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smooth-ride.jpg
+- name: walled-garden-walled-garden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden.jpg
+- name: hollywood-building-hollywood-building-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
+- name: paris-paris-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crabapple.jpg
 - name: udnie-P6180010.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6180010.jpg
-- name: catacombs-catacombs-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
-- name: old-cabin-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-circuit.jpg
+- name: school-clouds-church-clouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-diego-rivera1.jpg
+- name: border-crossing-bordercrossing-space-pizza.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-space-pizza.png
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
+- name: server-cloud-server-racks-door-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-4.jpg
 - name: san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gred-mash.jpg
-- name: christianity-christianity-under-construction-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-green-zuma.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-- name: catacombs-catacombs-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-neo-instinct.jpg
-- name: gypsymosaic-gypsy-eyes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes.jpg
-- name: store-on-corner-oldcabin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-plentiful.jpg
-- name: store-on-corner-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sunday.jpg
-- name: christianity-christianity-under-construction.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction.jpg
-- name: subway-subway-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
-- name: white-house-whitehouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
-- name: oldsmallboat-oldsmallboat-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-brush.jpg
-- name: crow_crunch_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crunch_paper.jpg
-- name: oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kandinsky-bv.jpg
-- name: border-fence-border-fence-on-hill-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
-- name: aws-s3-stories-new-15-190-800-500-0-max-0-1--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-15-190-800-500-0-max-0-1--5.jpg
-- name: old-granary-field-granaryfield-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-paper.jpg
+- name: old-barn-old-barn-1500-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-umberto-bocc.jpg
+- name: beach-rocks-beach-rocks-currents-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-feed-people.jpg
+- name: server-cloud-server-racks-door-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-nazi-poster.jpg
+- name: bluelake-post-modern-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-00-38-67.jpg
+- name: ellis-island-ellis-island-room-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
+- name: school-clouds-church-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
+- name: gypsy-wagon-gypsywagon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
+- name: beach-rocks-beach-rocks-currents-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-smoking-cigarette.jpg
+- name: school-clouds-church-clouds-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
+- name: window-window-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
+- name: carry-load-carryload-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dark-soul.jpg
+- name: castle-wall-DSC-0067-clean-view.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-clean-view.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-umberto-bocc.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
+- name: oldroad-old-road-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-clean-view.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: carry-load-carryload-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-granite.jpg
 ---
 The Eatonton Messenger Honored With Newspaper, Magazine Awards.&nbsp;Initiative Formed To Help Beautify Community.&nbsp;Man Killed By Rangers At Big Sur Trail Was Murder Suspect.&nbsp;Polis Maps Energy Economy Of The Future.&nbsp;One Or Two Ways Up Three Mile Creek.&nbsp;ThedaCare Pharmacist Explains The Spread Of Resistant Bacteria.&nbsp;The Warriors Attempt To Reverse Their Legal Losing Streak.&nbsp;Resort Proposed On Former Jackson Ranch.&nbsp;
